[package]
name = "CodeNothing"
version = "0.3.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cranelift = "0.121.2"
cranelift-jit = "0.121.2"
cranelift-module = "0.121.2"
target-lexicon = "0.13"
libloading = "0.8.0"
once_cell = "1.18.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0.12"
